--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,20 @@ buildscript {
         maven {
             url  "http://dl.bintray.com/ryansgot/maven"
         }
+        maven {
+            url 's3://repo.fsryan.com/release'
+            credentials(AwsCredentials) {
+                accessKey = project.hasProperty("awsMavenAccessKey") ? project.property("awsMavenAccessKey") : ""
+                secretKey = project.hasProperty("awsMavenSecretKey") ? project.property("awsMavenSecretKey") : ""
+            }
+        }
+        maven {
+            url 's3://repo.fsryan.com/snapshot'
+            credentials(AwsCredentials) {
+                accessKey = project.hasProperty("awsMavenAccessKey") ? project.property("awsMavenAccessKey") : ""
+                secretKey = project.hasProperty("awsMavenSecretKey") ? project.property("awsMavenSecretKey") : ""
+            }
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
@@ -12,6 +26,7 @@ buildscript {
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         classpath 'com.fsryan.gradle.autosemver:autosemver-git:0.1.0-alpha'
         classpath 'com.fsryan.gradle.coverage:android-java-coverage-merger:0.0.0'
+        classpath 'com.fsryan.gradle.findbugsvariants:findbugs-variants:0.0.2-test+1502523525368'
     }
 }
 
