--- a/circle.yml
+++ b/circle.yml
@@ -31,15 +31,15 @@ deployment:
   stable:
     branch: master
     commands:
-      - ./gradlew findBugsRelease release -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
+      - ./gradlew findBugsRelease release -PbintrayUser=$BINTRAY_USER -PbintrayApiKey=$BINTRAY_API_KEY -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
   beta:
     branch: beta
     commands:
-      - ./gradlew findBugsRelease release -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
+      - ./gradlew findBugsRelease release -PbintrayUser=$BINTRAY_USER -PbintrayApiKey=$BINTRAY_API_KEY -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
   alpha:
     branch: alpha
     commands:
-      - ./gradlew findBugsRelease release -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
+      - ./gradlew findBugsRelease release -PbintrayUser=$BINTRAY_USER -PbintrayApiKey=$BINTRAY_API_KEY -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
   integration:
     branch: integration
     commands:
