working last and first queries with/without offset; only ContentProviderQueryable--the hardest part
fix possibility for query string to be null in QueryCorrector

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,5 @@ dependencies {
 
     compile project(':forsuredbandroid')
 
-    annotationProcessor 'com.fsryan.forsuredb:forsuredbcompiler:0.11.0'
+    annotationProcessor "com.fsryan.forsuredb:forsuredbcompiler:$forsuredbVersion"
 }
