--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,9 @@ allprojects {
             }
         }
         jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
     }
 
     autosemver {
