--- a/forsuredbandroid/src/androidTest/AndroidManifest.xml
+++ b/forsuredbandroid/src/androidTest/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.forsuredb">
     <application>
         <provider
-            android:authorities="com.fsryan.forsuredb.debug.content"
-            android:name="com.fsryan.forsuredb.queryable.FSDefaultProvider" />
+            android:name="com.fsryan.forsuredb.queryable.FSDefaultProvider"
+            android:authorities="com.fsryan.forsuredb.test.content" />
     </application>
 </manifest>
