--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,10 +63,10 @@ forsuredb {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:$supportLibVersion"
-    implementation "com.android.support:recyclerview-v7:$supportLibVersion"
+    implementation deps.support.appcompatv7
+    implementation deps.support.recyclerviewv7
 
     implementation project(':forsuredbandroid')
 
-    annotationProcessor "com.fsryan.forsuredb:forsuredbcompiler:$forsuredbVersion"
+    annotationProcessor deps.forsuredb.compiler
 }
