--- a/circle.yml
+++ b/circle.yml
@@ -21,7 +21,7 @@ test:
         parallel: false
     - circle-android wait-for-boot
   override:
-    - ./gradlew clean :forsuredbandroid:createMergedDebugReport bumpVersion -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
+    - ./gradlew clean :forsuredbandroid:createMergedReports bumpVersion -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
   post:
     - mkdir $CIRCLE_TEST_REPORTS/forsuredbandroid
     - cp -r forsuredbandroid/build/reports/* $CIRCLE_TEST_REPORTS/forsuredbandroid
