use correct findbugs tasks in circle yml file [skip ci]

--- a/circle.yml
+++ b/circle.yml
@@ -31,16 +31,16 @@ deployment:
   stable:
     branch: master
     commands:
-      - ./gradlew findBugsRelease release -PbintrayUser=$BINTRAY_USER -PbintrayApiKey=$BINTRAY_API_KEY -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
+      - ./gradlew findbugsDirectDBRelease findbugsContentProviderRelease release -PbintrayUser=$BINTRAY_USER -PbintrayApiKey=$BINTRAY_API_KEY -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
   beta:
     branch: beta
     commands:
-      - ./gradlew findBugsRelease release -PbintrayUser=$BINTRAY_USER -PbintrayApiKey=$BINTRAY_API_KEY -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
+      - ./gradlew findbugsDirectDBRelease findbugsContentProviderRelease release -PbintrayUser=$BINTRAY_USER -PbintrayApiKey=$BINTRAY_API_KEY -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
   alpha:
     branch: alpha
     commands:
-      - ./gradlew findBugsRelease release -PbintrayUser=$BINTRAY_USER -PbintrayApiKey=$BINTRAY_API_KEY -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
+      - ./gradlew findbugsDirectDBRelease findbugsContentProviderRelease release -PbintrayUser=$BINTRAY_USER -PbintrayApiKey=$BINTRAY_API_KEY -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
   integration:
     branch: integration
     commands:
-      - ./gradlew findBugsDebug releaseSnapshot -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
+      - ./gradlew findbugsDirectDBDebug findbugsContentProviderDebug releaseSnapshot -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
