--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.fsryan.forsuredb'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion versions.compileSdk
+    buildToolsVersion versions.buildTools
 
     defaultConfig {
         applicationId "com.forsuredb.testapp"
@@ -57,7 +57,7 @@ forsuredb {
     migrationDirectory = 'app/src/main/assets'
     appProjectDirectory = 'app'
     resourcesDirectory = 'app/src/main/resources'
-    fsSerializerFactoryClass = 'com.forsuredb.testapp.model.TestJsonAdapterFactory'
+    fsSerializerFactoryClass = 'com.forsuredb.testapp.model.TestAdapterFactory'
     dbmsIntegratorClass = 'com.fsryan.forsuredb.FSAndroidSQLiteGenerator'
 }
 
@@ -66,6 +66,7 @@ dependencies {
     implementation deps.support.appcompatv7
     implementation deps.support.recyclerviewv7
 
+    implementation deps.forsuredb.modelsGson
     implementation project(':forsuredbandroid')
 
     annotationProcessor deps.forsuredb.compiler
