--- a/forsuredbandroid/build.gradle
+++ b/forsuredbandroid/build.gradle
@@ -14,8 +14,8 @@ jacoco {
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion versions.compileSdk
+    buildToolsVersion versions.buildTools
 
     defaultConfig {
         minSdkVersion versions.minSdk
@@ -66,6 +66,7 @@ dependencies {
 
     api deps.forsuredb.api
     api deps.forsuredb.sqlitelib
+    api deps.forsuredb.dbinfo
 
     testImplementation deps.junit
     testImplementation deps.guava
