--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,8 @@ machine:
     version: oraclejdk8
 dependencies:
   pre:
-    - /usr/local/android-sdk-linux/tools/bin/sdkmanager 'build-tools;26.0.2' 'extras;google;m2repository'
+    - echo y | android update sdk --no-ui --all --filter tools,extra-android-m2repository
+    - echo y | android update sdk --no-ui --all --filter build-tools-26.0.2,android-26
   override:
     - ./gradlew dependencies -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
 test:
