--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript { scriptHandler ->
 
             'supportLibrary': '26.0.2',
             'androidPlugin': '3.0.0',
-            'forsuredb': '0.12.4-test+1510581558891',
+            'forsuredb': '0.12.13-test+1514211003905',
             'release': [
                     'buildTime': Long.toString(new Date().getTime()),
                     'remote': 'origin',
@@ -48,10 +48,10 @@ buildscript { scriptHandler ->
             junit: 'junit:junit:4.12',
             mockito: 'org.mockito:mockito-core:1.10.19',
             forsuredb: [
-                    'plugin': 'com.fsryan:forsuredbplugin:0.4.0',
+                    'plugin': 'com.fsryan.gradle.forsuredb:forsuredbplugin:0.5.0',
                     'api': "com.fsryan.forsuredb:forsuredbapi:${versions.forsuredb}",
                     'compiler': "com.fsryan.forsuredb:forsuredbcompiler:${versions.forsuredb}",
-                    'sqlitelib': 'com.fsryan.forsuredb:sqlitelib:0.6.3-test+1510584011383',
+                    'sqlitelib': "com.fsryan.forsuredb:sqlitelib:${versions.forsuredb}",
                     'dbinfo': "com.fsryan.forsuredb:dbinfo:${versions.forsuredb}",
                     'modelsGson': "com.fsryan.forsuredb:forsuredbmodels-gson:${versions.forsuredb}"
             ]
@@ -61,6 +61,7 @@ buildscript { scriptHandler ->
         maven {
             url  "http://dl.bintray.com/ryansgot/maven"
         }
+        mavenLocal()
         maven {
             url 's3://repo.fsryan.com/release'
             credentials(AwsCredentials) {
@@ -98,6 +99,7 @@ allprojects {
         maven {
             url  "http://dl.bintray.com/ryansgot/maven"
         }
+        mavenLocal()
         maven {
             url 's3://repo.fsryan.com/release'
             credentials(AwsCredentials) {
