--- a/circle.yml
+++ b/circle.yml
@@ -16,9 +16,9 @@ dependencies:
     - ./gradlew dependencies -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
 test:
   pre:
-    - emulator -avd circleci-android24 -no-audio -no-window:
+    - emulator -avd circleci-android24 -no-window:
         background: true
-        parallel: false
+        parallel: true
     - circle-android wait-for-boot
   override:
     - ./gradlew clean :forsuredbandroid:createMergedReports bumpVersion -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
