Revert "copy avd config from circle site"
This reverts commit 88646ab4c18c5e6d6a9e1a3bf1fa6682c41768f3.

--- a/circle.yml
+++ b/circle.yml
@@ -16,9 +16,9 @@ dependencies:
     - ./gradlew dependencies -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
 test:
   pre:
-    - emulator -avd circleci-android24 -no-window:
+    - emulator -avd circleci-android24 -no-audio -no-window:
         background: true
-        parallel: true
+        parallel: false
     - circle-android wait-for-boot
   override:
     - ./gradlew clean :forsuredbandroid:createMergedReports bumpVersion -PawsMavenAccessKey=$AWS_ACCESS_KEY_ID -PawsMavenSecretKey=$AWS_SECRET_KEY
