--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     defaultConfig {
         applicationId "com.forsuredb.testapp"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 27
     }
 
     compileOptions {
@@ -65,7 +65,7 @@ forsuredb {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation deps.support.appcompatv7
     implementation deps.support.recyclerviewv7
