--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,13 +34,15 @@ jobs:
           command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-window -accel on
           background: true
       - run:
-          name: Wait emulator
-          command: |
-            # wait for it to have booted
-            circle-android wait-for-boot
-            # unlock the emulator screen
-            sleep 30
-            adb shell input keyevent 82
+          name: Wait for emulator
+          command: chmod +x scripts/android-wait-for-boot.sh && ./scripts/android-wait-for-boot.sh
+          environment:
+            TERM: dumb
+      - run:
+          name: Remove lock screen
+          command: adb shell input keyevent 82
+          environment:
+            TERM: dumb
       - run:
           name: Create Merged Reports
           command: ./gradlew :forsuredbandroid:createMergedReports
