rearrange steps to attempt to do more work while emulator booting

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,12 @@ jobs:
       - checkout
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "library/build.gradle" }}
-#      - run:
-#         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
-#         command: sudo chmod +x ./gradlew
+      - run:
+          name: Launch emulator
+          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-window
+          background: true
+          environment:
+            TERM: dumb
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
@@ -26,13 +29,6 @@ jobs:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "library/build.gradle" }}
-#      - run:
-#          name: Setup emulator
-#          command: sdkmanager "system-images;android-25;google_apis;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-25;google_apis;armeabi-v7a"
-      - run:
-          name: Launch emulator
-          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-window -accel on
-          background: true
       - run:
           name: Wait for emulator
           command: chmod +x scripts/android-wait-for-boot.sh && ./scripts/android-wait-for-boot.sh
