--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,53 +1,102 @@
 version: 2
 jobs:
-  build:
-    working_directory: ~/code
     docker:
-      - image: ryansgot/android:android-27-with-api26-emulator
-    environment:
-#      QEMU_AUDIO_DRV: none
-      GIT_AUTHOR_NAME: circleci
-      GIT_AUTHOR_EMAIL: noreply@circleci.com
-      GIT_COMMITTER_NAME: circleci
-      GIT_COMMITTER_EMAIL: noreply@circleci.com
-      EMAIL: noreply@circleci.com
-      JVM_OPTS: -Xmx3200m
+      - image: drazisil/android-sdk:1.2.60
+        environment:
+    #      QEMU_AUDIO_DRV: none
+          GIT_AUTHOR_NAME: circleci
+          GIT_AUTHOR_EMAIL: noreply@circleci.com
+          GIT_COMMITTER_NAME: circleci
+          GIT_COMMITTER_EMAIL: noreply@circleci.com
+          EMAIL: noreply@circleci.com
+          JVM_OPTS: -Xmx3200m
     steps:
+    working_directory: ~/androidlearn
+    steps:
+      # Ensure your image has git, otherwise the checkout step will fail
+      # - run: apt-get -qq update; apt-get -y install git
       - checkout
-      - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "library/build.gradle" }}
+      - run: mkdir artifacts
       - run:
-          name: Download Dependencies
-          command: ./gradlew androidDependencies
-      - save_cache:
-          paths:
-            - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "library/build.gradle" }}
+          name: List what is currently installed
+          command: sdkmanager --list
       - run:
-          name: Launch emulator
-          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-window
+          name: Create AVD
+          command: |
+            echo "n" | avdmanager -v create avd -n androidlearn -k "system-images;android-25;google_apis;armeabi-v7a" -c 512M -g google_apis  -d "Nexus 7 2013"
+      - run:
+          name: Run Emulator
           background: true
-          parallel: false
-          environment:
-            TERM: dumb
+          command: |
+            $ANDROID_SDK_ROOT/tools/emulator -no-window -noaudio -no-boot-anim -gpu swiftshader @androidlearn
       - run:
-          name: Wait for emulator
-          command: circle-android wait-for-boot
-          environment:
-            TERM: dumb
+          name: Wait for Emulator
+          no_output_timeout: 15m
+          command: |
+            sleep 15
+            $ANDROID_SDK_ROOT/platform-tools/adb devices
+            sleep 10
       - run:
-          name: Remove lock screen
-          command: adb shell input keyevent 82
-          environment:
-            TERM: dumb
+          name: Fetch logcat and props
+          background: true
+          command: |
+            $ANDROID_SDK_ROOT/platform-tools/adb logcat >> ./artifacts/logcat.txt
+            $ANDROID_SDK_ROOT/platform-tools/adb shell getprop >> ./artifacts/props.txt
       - run:
-          name: Create Merged Reports
-          command: ./gradlew :forsuredbandroid:createMergedReports
-      - run:
-          name: Codecov
-          command: bash <(curl -s https://codecov.io/bash) -Z -t $CODECOV_TOKEN
-      - store_artifacts:
-          path: forsuredbandroid/build/reports
-          destination: reports
-      - store_test_results:
-          path: forsuredbandroid/build/test-results
+          name: Run Android Connected Tests
+          command: |
+            export ADB_INSTALL_TIMEOUT=120
+            export ANDROID_HOME=$ANDROID_SDK_ROOT
+            ./gradlew :forsuredbandroid:assembleContentProviderDebug :forsuredbandroid:assembleDirectDBDebug
+            # Wait for emulator to fully boot
+            # TODO: Need to create a good check
+            sleep 60
+            # Is the emulator still running?
+            adb devices
+            # Check if package manager is running
+            adb shell pm list packages
+            # Install package
+            $ANDROID_SDK_ROOT/platform-tools/adb install /home/android/androidlearn/app/build/outputs/apk/app-debug.apk
+            ./gradlew :forsuredbandroid:createMergedReports
+#  build:
+#    working_directory: ~/code
+#    docker:
+#      - image: ryansgot/android:android-27-with-api26-emulator
+#      - checkout
+#      - restore_cache:
+#          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "library/build.gradle" }}
+#      - run:
+#          name: Download Dependencies
+#          command: ./gradlew androidDependencies
+#      - save_cache:
+#          paths:
+#            - ~/.gradle
+#          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "library/build.gradle" }}
+#      - run:
+#          name: Launch emulator
+#          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-window
+#          background: true
+#          parallel: false
+#          environment:
+#            TERM: dumb
+#      - run:
+#          name: Wait for emulator
+#          command: circle-android wait-for-boot
+#          environment:
+#            TERM: dumb
+#      - run:
+#          name: Remove lock screen
+#          command: adb shell input keyevent 82
+#          environment:
+#            TERM: dumb
+#      - run:
+#          name: Create Merged Reports
+#          command: ./gradlew :forsuredbandroid:createMergedReports
+#      - run:
+#          name: Codecov
+#          command: bash <(curl -s https://codecov.io/bash) -Z -t $CODECOV_TOKEN
+#      - store_artifacts:
+#          path: forsuredbandroid/build/reports
+#          destination: reports
+#      - store_test_results:
+#          path: forsuredbandroid/build/test-results
