--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,8 @@
 version: 2
 jobs:
+  build:
     docker:
       - image: drazisil/android-sdk:1.2.60
-        environment:
-    #      QEMU_AUDIO_DRV: none
-          GIT_AUTHOR_NAME: circleci
-          GIT_AUTHOR_EMAIL: noreply@circleci.com
-          GIT_COMMITTER_NAME: circleci
-          GIT_COMMITTER_EMAIL: noreply@circleci.com
-          EMAIL: noreply@circleci.com
-          JVM_OPTS: -Xmx3200m
-    steps:
     working_directory: ~/androidlearn
     steps:
       # Ensure your image has git, otherwise the checkout step will fail
@@ -47,17 +39,24 @@ jobs:
           command: |
             export ADB_INSTALL_TIMEOUT=120
             export ANDROID_HOME=$ANDROID_SDK_ROOT
+            # ./scripts/test.sh
             ./gradlew :forsuredbandroid:assembleContentProviderDebug :forsuredbandroid:assembleDirectDBDebug
+
             # Wait for emulator to fully boot
             # TODO: Need to create a good check
             sleep 60
+
             # Is the emulator still running?
             adb devices
+
             # Check if package manager is running
             adb shell pm list packages
+
             # Install package
-            $ANDROID_SDK_ROOT/platform-tools/adb install /home/android/androidlearn/app/build/outputs/apk/app-debug.apk
             ./gradlew :forsuredbandroid:createMergedReports
+      - store_artifacts:
+          path: ~/androidlearn/artifacts
+          destination: env
 #  build:
 #    working_directory: ~/code
 #    docker:
