--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/flyve_mdm
+    working_directory: ~/code
     docker:
       # Android the primary container
       - image: circleci/android:api-26-alpha
@@ -52,7 +52,7 @@ jobs:
           path: app/build/reports
           destination: reports
       - store_test_results:
-      path: app/build/test-results
+          path: app/build/test-results
 #  build:
 #    working_directory: ~/code
 #    docker:
