--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ forsuredb {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation deps.support.appcompatv7
     implementation deps.support.recyclerviewv7
